<resources>
    <string name="app_name">Blue Box</string>
    <string name="port_listener_service" translatable="false">dt.bluebox.PortListener</string>

    <!-- Menu strings -->
    <string name="menu_home_start">Start Logger</string>
    <string name="menu_home_stop">Stop Logger</string>
    <string name="menu_home_settings">Settings</string>
    <string name="menu_home_refresh">Refresh</string>

    <!-- Main activity strings -->
    <string name="main_activity_current_label">Current log file: </string>
    <string name="main_activity_current_placeholder">(Use refresh)</string> <!--Sat Feb 25, 2017 21:55:19-->
    <string name="main_activity_storage_perm">Need storage permission to write logs. Otherwise the logs can\'t be saved.</string>

    <!-- Error strings -->
    <string name="err_cant_mkdir">Can\'t make folder to store logs</string>
    <string name="err_settings_incomplete">Rotation period or port # is missing. Please set them first.</string>
    <string name="err_port_range">Port must be between 2 and 65535</string>

    <!-- Settings Strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_port_title">Port</string>
    <string name="settings_port_summary">TCP port to listen for incoming ascii log messages</string>
    <string name="settings_rotate_title">Rotatation Period</string>
    <string name="settings_rotate_summary">How often, in hours, to rotate (change) the file being used for logging.</string>

    <string name="ok">OK</string>
</resources>
