<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_home_start"
        android:icon="@drawable/ic_play_circle_filled_white_48dp"
        android:title="@string/menu_home_start"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_home_refresh"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:title="@string/menu_home_refresh"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_home_stop"
        android:icon="@drawable/ic_cancel_white_48dp"
        android:title="@string/menu_home_stop"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_home_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/menu_home_settings"
        app:showAsAction="always"
        />
</menu>